--- a/interfaz.html
+++ b/interfaz.html
@@ -7,6 +7,13 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <h1>Bienvenido a mi sitio de ábaco</h1>
+
+  <!-- Botón para ir al ábaco -->
+  <a href="ábaco/index.html">
+    <button>Ir al ábaco</button>
+  </a>
+
   <!-- Aquí irá tu abaco interactivo -->
   <script src="script.js"></script>
 </body>
