--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h1>Bienvenido a mi sitio de ábaco</h1>
 
   <!-- Botón para ir al ábaco -->
-  <a href="ábaco/índice.html">
+  <a href="abaco/Index.html">
     <button>Ir al ábaco</button>
   </a>
 
