--- a/index.html
+++ b/index.html
@@ -1,20 +1,27 @@
+<!-- abaco/Index.html -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mi sitio de ábaco</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Ábaco Interactivo</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Bienvenido a mi sitio de ábaco</h1>
+  <div id="abaco-container"></div>
 
-  <!-- Botón para ir al ábaco -->
-  <a href="abaco/Index.html">
-    <button>Ir al ábaco</button>
-  </a>
+  <div id="controles">
+    <input
+      type="text"
+      id="valor-input"
+      placeholder="Ingresa un número (0–9999)"
+      maxlength="4"
+    />
+    <button id="btn-mostrar">Mostrar en el ábaco</button>
+    <button id="btn-apagar">Reiniciar ábaco</button>
+  </div>
 
-  <!-- Aquí irá tu abaco interactivo -->
-  <script src="script.js"></script>
+  <script src="abacus.js"></script>
 </body>
 </html>
+
